<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
        <mandatory.java.args>--add-opens java.desktop/java.beans=ALL-UNNAMED --add-opens java.desktop/javax.swing.border=ALL-UNNAMED --add-opens java.desktop/javax.swing.event=ALL-UNNAMED --add-opens java.desktop/sun.swing=ALL-UNNAMED --add-opens java.desktop/java.awt.image=ALL-UNNAMED --add-opens java.desktop/java.awt.color=ALL-UNNAMED --add-opens java.desktop/sun.awt.image=ALL-UNNAMED --add-opens java.desktop/javax.swing=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true -Dfile.encoding=UTF-8</mandatory.java.args>
    </properties>

    <parent>
        <artifactId>forge</artifactId>
        <groupId>forge</groupId>
        <version>${revision}</version>
    </parent>

    <artifactId>forge-gui-mobile-dev</artifactId>
    <packaging>jar</packaging>
    <name>Forge Mobile Dev</name>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>timestamp-property</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>timestamp-property</goal>
                        </goals>
                        <configuration>
                            <!-- generate MonthDate code to month.date property -->
                            <name>month.date</name>
                            <pattern>MM.dd</pattern>
                        </configuration>
                    </execution>
                    <execution>
                        <id>regex-property</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>regex-property</goal>
                        </goals>
                        <configuration>
                            <!-- generate versionName from revision property to snapshot-version property  -->
                            <name>snapshot-version</name>
                            <value>${revision}</value>
                            <regex>-SNAPSHOT</regex>
                            <replacement>-SNAPSHOT-${month.date}</replacement>
                            <failIfNoMatch>false</failIfNoMatch>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>2.5.1</version>
                <executions>
                    <execution>
                        <id>l4j-adv</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>gui</headerType>
                            <outfile>${project.build.directory}/forge-adventure.exe</outfile>
                            <jar>${project.build.finalName}-jar-with-dependencies.jar</jar>
                            <dontWrapJar>true</dontWrapJar>
                            <errTitle>forge</errTitle>
                            <downloadUrl>https://bell-sw.com/pages/downloads/#jdk-17-lts</downloadUrl>
                            <icon>src/main/config/forge-adventure.ico</icon>
                            <jre>
                                <minVersion>17</minVersion>
                                <requiresJdk>true</requiresJdk>
                                <maxHeapSize>4096</maxHeapSize>
                                <opts>
                                    <opt>${mandatory.java.args}</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileVersion>
                                    1.0.0.0
                                </fileVersion>
                                <txtFileVersion>
                                    1.0.0.0
                                </txtFileVersion>
                                <fileDescription>Forge</fileDescription>
                                <copyright>Forge</copyright>
                                <productVersion>
                                    1.0.0.0
                                </productVersion>
                                <txtProductVersion>
                                    1.0.0.0
                                </txtProductVersion>
                                <productName>forge-adventure</productName>
                                <internalName>forge-adventure</internalName>
                                <originalFilename>forge-adventure.exe</originalFilename>
                            </versionInfo>
                        </configuration>
                    </execution>
                    <!--extra-->
                </executions>
            </plugin>
            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>replacer</artifactId>
                <version>1.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <basedir>${basedir}/${configSourceDirectory}</basedir>
                    <filesToInclude>forge-adventure.sh, forge-adventure.command, forge-adventure.cmd</filesToInclude>
                    <outputBasedir>${project.build.directory}</outputBasedir>
                    <outputDir>.</outputDir>
                    <regex>false</regex>
                    <replacements>
                        <replacement>
                            <token>$project.build.finalName$</token>
                            <value>${project.build.finalName}-jar-with-dependencies.jar</value>
                        </replacement>
                        <replacement>
                            <token>$mandatory.java.args$</token>
                            <value>${mandatory.java.args}</value>
                        </replacement>
                    </replacements>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <attach>false</attach>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifestEntries>
                            <Implementation-Title>${project.name}</Implementation-Title>
                            <Implementation-Version>${snapshot-version}</Implementation-Version>
                            <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
                            <Add-Opens>java.desktop/java.beans java.desktop/javax.swing.border java.desktop/javax.swing.event java.desktop/sun.swing java.desktop/java.awt.image java.desktop/java.awt.color java.desktop/sun.awt.image java.desktop/javax.swing java.desktop/java.awt java.base/java.util java.base/java.lang java.base/java.lang.reflect java.base/java.text java.desktop/java.awt.font java.base/jdk.internal.misc java.base/sun.nio.ch java.base/java.nio java.base/java.math java.base/java.util.concurrent java.base/java.net</Add-Opens>
                            <Main-Class>forge.app.Main</Main-Class>
                            <SplashScreen-Image>splash/logo.gif</SplashScreen-Image>
                        </manifestEntries>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <!-- this is used for inheritance merges -->
                        <phase>package</phase>
                        <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>${project.basedir}</directory>
                <includes>
                    <include>**/title_bg_lq.png</include>
                    <include>**/title_bg_lq_portrait.png</include>
                    <include>**/transition.png</include>
                    <include>**/adv_bg_texture.jpg</include>
                    <include>**/adv_bg_splash.png</include>
                    <include>**/bg_splash.png</include>
                    <include>**/bg_texture.jpg</include>
                    <include>**/font1.ttf</include>
                    <include>**/logo.gif</include>
                </includes>
            </resource>
            <resource>
                <directory>filters</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
    <dependencies>
        <dependency>
            <groupId>forge</groupId>
            <artifactId>forge-gui-mobile</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-backend-lwjgl3</artifactId>
            <version>1.13.5</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-platform</artifactId>
            <version>1.13.5</version>
            <classifier>natives-desktop</classifier>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-freetype-platform</artifactId>
            <version>1.13.5</version>
            <classifier>natives-desktop</classifier>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.9.0</version>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx-controllers</groupId>
            <artifactId>gdx-controllers-desktop</artifactId>
            <version>2.2.4</version>
            <exclusions>
                <exclusion>
                    <groupId>com.badlogicgames.gdx</groupId>
                    <artifactId>gdx</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.badlogicgames.gdx</groupId>
            <artifactId>gdx-box2d-platform</artifactId>
            <version>1.13.5</version>
            <classifier>natives-desktop</classifier>
        </dependency>
    </dependencies>
</project>
